fix: adjust sticky wrapper layout and overflow

--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -15,3 +15,7 @@
 .approachBanner{
     background-color: colors.$primary;
 }
+
+.sticky-active header {
+    margin-top: 0;
+}
